# vnc-use

./: .env.example  .gitignore  .pre-commit-config.yaml  LIVE_DESKTOP_X11.md  POLICY_PROFILES.md  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
docs/: VNC_USE_SUPERVISED_WORKFLOW_NOTES.md
ops/systemd/: vnc-use.service.example
scripts/: health_check.py
src/vnc_use/: __init__.py  agent.py  cli.py  credential_store.py  credential_store_postgres.py  credentials_cli.py  logging_utils.py  mcp_cli.py  mcp_server.py  policy.py  safety.py  types.py
src/vnc_use/backends/: vnc.py
src/vnc_use/planners/: __init__.py  anthropic.py  base.py  gemini.py  native_computer.py  openai_compatible.py  utils.py  vnc_tools.py
tests/: conftest.py  test_agent.py  test_backends_vnc.py  test_credential_store.py  test_credential_store_postgres.py  test_e2e.py  test_gemini_wrapper.py  test_hitl.py  test_logging_utils.py  test_mcp_server.py  test_mcp_server_comprehensive.py  test_multi_model.py  test_planners_anthropic.py  test_planners_gemini.py  test_planners_native_computer.py  test_planners_utils.py  test_policy.py  test_safety.py  test_vnc_backend.py  test_vnc_tools.py
